--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <div class="card">
             <div >
                 <h3>Vanessa Recinos</h3>
-                <p>Business Analyst, Queen, New Jersey Devils Fan (?)</p>
+                <p>Business Analyst, Queen, Pittsburgh Penguins Fan</p>
                 <h4>Sydney, Australia</h4>
             </div>
             <img class="avatar" src="images/Vanessa.png">
