--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <div>
+            <div id = "textshadow"">
                 <h3>Vanessa Recinos</h3>
                 <p>Business Analyst, Queen, Pittsburgh Penguins Fan</p>
                 <h4>Sydney, Australia</h4>
